bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "llvm", version = "")
local_path_override(
    module_name = "llvm",
    path = "../../",
)

register_toolchains(
    "@llvm//toolchain:all",
)

bazel_dep(name = "rules_platform", version = "0.1.0")
bazel_dep(name = "rules_go", version = "0.60.0")

# Special rules_go branch that allow bootstrapping compiler from source, so we can patch it. This is needed for Cgo to work.
# This can be removed once go 1.27 ships, since it has our patches merged upstream.
archive_override(
    module_name = "rules_go",
    integrity = "sha256-8ezQcDyHHp/+xa9NbUJO/3/kDEFFmJaV4pb1fd99m74=",
    strip_prefix = "rules_go-62d798d48ae153e048a7f9c43ba68cfa1ea10924",
    url = "https://github.com/bazel-contrib/rules_go/archive/62d798d48ae153e048a7f9c43ba68cfa1ea10924.tar.gz",
)

bazel_dep(name = "gazelle", version = "0.46.0")
single_version_override(
    module_name = "gazelle",
    patch_strip = 1,
    patches = ["//:gazelle_pure.patch"],
    version = "0.46.0",
)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(
    name = "go_sdk",
    experimental_build_compiler_from_source = True,
    go_mod = "//:go.mod",
    patch_strip = 1,
    patches = [":go_compiler_flags.patch"],
)

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_tetratelabs_wazero")
