module(
    name = "custom_targets_example",
    version = "0.0.0",
)

bazel_dep(name = "toolchains_llvm_bootstrapped", version = "")
local_path_override(
    module_name = "toolchains_llvm_bootstrapped",
    path = "../../",
)

llvm_toolchains = use_extension("@toolchains_llvm_bootstrapped//toolchain/extension:llvm.bzl", "llvm")
llvm_toolchains.exec(
    arch = "x86_64",
    os = "linux",
)
llvm_toolchains.exec(
    arch = "aarch64",
    os = "linux",
)
llvm_toolchains.target(
    arch = "x86_64",
    os = "linux",
)
llvm_toolchains.target(
    arch = "aarch64",
    os = "linux",
)
use_repo(llvm_toolchains, "llvm_toolchains")

register_toolchains("@llvm_toolchains//:all")
