module(
    name = "custom_targets_example",
    version = "0.0.0",
)

bazel_dep(name = "toolchains_llvm_bootstrapped", version = "")
local_path_override(
    module_name = "toolchains_llvm_bootstrapped",
    path = "../../",
)

bazel_dep(name = "rules_cc", version = "0.2.16")

toolchain = use_extension("@toolchains_llvm_bootstrapped//extensions:toolchain.bzl", "llvm")
toolchain.exec(
    arch = "x86_64",
    os = "linux",
)
toolchain.exec(
    arch = "aarch64",
    os = "linux",
)
toolchain.target(
    arch = "x86_64",
    os = "linux",
)
toolchain.target(
    arch = "aarch64",
    os = "linux",
)
use_repo(toolchain, "llvm_toolchains")

register_toolchains("@llvm_toolchains//:all")
