module(
    name = "custom_targets_example",
    version = "0.0.0",
)

bazel_dep(name = "llvm", version = "")
local_path_override(
    module_name = "llvm",
    path = "../../",
)

bazel_dep(name = "rules_cc", version = "0.2.16")

toolchain = use_extension("@llvm//extensions:toolchain.bzl", "llvm")
toolchain.exec(
    arch = "x86_64",
    os = "linux",
)
toolchain.exec(
    arch = "aarch64",
    os = "linux",
)
toolchain.target(
    arch = "x86_64",
    os = "linux",
)
toolchain.target(
    arch = "aarch64",
    os = "linux",
)
use_repo(toolchain, "llvm_toolchains")

register_toolchains("@llvm_toolchains//:all")
