bazel_dep(name = "rules_cc", version = "0.2.12")
bazel_dep(name = "with_cfg.bzl", version = "0.12.0")

bazel_dep(name = "toolchains_llvm_bootstrapped", version = "")
local_path_override(
    module_name = "toolchains_llvm_bootstrapped",
    path = "../../",
)

register_toolchains(
    "@toolchains_llvm_bootstrapped//toolchain:all",
)
